test/compile-fail/resolution/use/self-in-empty-prefix-group/expected.txt
error[E0431]: `self` imports are only allowed in a braced list with a non-empty prefix
  ┌─ ./test/compile-fail/resolution/use/self-in-empty-prefix-group/top.rhdl:1:6
  │
1 │ use {self};
  │      ^^^^ this makes no sense

